swagger and new api setup
